--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@toverux/ngx-sweetalert2": "^4.0.0",
     "angular-material": "http://github.com/angular/bower-material/tarball/v1.2.1",
     "bootstrap": "^4.6.0",
     "core-util-is": "^1.0.2",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.3",
+    "sweetalert2": "^10.14.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
