--- a/package.json
+++ b/package.json
@@ -27,20 +27,20 @@
     "@angular/platform-browser-dynamic": "11.0.4",
     "@angular/router": "11.0.4",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
-    "bootstrap": "4.5.3",
+    "bootstrap": "^4.6.0",
     "core-js": "3.8.1",
-    "jquery": "3.5.1",
+    "jquery": "^1.9.1",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "ng2-nouislider": "1.8.2",
     "nouislider": "14.6.3",
-    "popper.js": "1.16.1",
+    "popper.js": "^1.12.3",
     "rxjs": "6.6.3",
     "rxjs-compat": "6.6.3",
     "zone.js": "0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1100.4",
-    "@angular/cli": "11.0.4",
+    "@angular/cli": "^11.1.2",
     "@angular/compiler-cli": "11.0.4",
     "@angular/language-service": "11.0.4",
     "@types/jasmine": "3.6.2",
